# Sephera

./: .gitignore  404.html  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  SECURITY.md  __version__.py  base64_load.py  build.sh  command.py  config_data.py  config_help.py  generate_config.py  generate_data_config.py  generate_help.py  handler.py  index.html  install.sh  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt  sephera.spec  shell.nix  test.cc  test.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  cpp_build.yml  fuzz.yml  publish.yml  release.yml
Source/: main.cc  sephera.cc
Source/core/: loc.cc  loc_count.cc  parser.cc
Source/core/include/: loc.hpp  parser.hpp
Source/gui/: init.cc  text_box.cc
Source/gui/include/: init.hpp  sephera.hpp  text_box.hpp
Source/include/: loc.hpp  loc_count.hpp  parser.hpp
benchmarks/: README.md  benchmark_harness.py  benchmark_model.py  benchmark_render.py  run.py
chart/: Exporter.py
config/: languages.yml  msg.toml
crates/sephera_cli/: Cargo.toml  README.crates-io.md
crates/sephera_cli/src/: args.rs  budget.rs  context_config.rs  context_diff.rs  lib.rs  main.rs  output.rs  progress.rs  run.rs
crates/sephera_cli/src/context_config/: discovery.rs  load.rs  resolve.rs  types.rs
crates/sephera_cli/src/output/: context_json.rs  context_markdown.rs  graph.rs  profiles.rs  table.rs  timing.rs  write.rs
crates/sephera_cli/tests/: context_config.rs  context_diff.rs  context_output.rs  graph_cli.rs  loc_cli.rs  loc_table.rs  url_mode.rs
crates/sephera_cli/tests/snapshots/: loc_cli__loc_command_prints_report_successfully@success.snap  loc_cli__loc_command_returns_error_for_invalid_regex_ignore.snap  loc_cli__loc_command_returns_error_for_missing_path.snap
crates/sephera_core/: Cargo.toml  README.crates-io.md
crates/sephera_core/src/: core.rs  lib.rs
crates/sephera_core/src/core/: code_loc.rs  config.rs  context.rs  generated_language_data.rs  graph.rs  ignore.rs  language_data.rs  line_slices.rs  project_files.rs  runtime.rs
crates/sephera_core/src/core/code_loc/: analyzer.rs  ignore.rs  reader.rs  scanner.rs  tests.rs  types.rs
crates/sephera_core/src/core/compression/: extractor.rs  mod.rs  parser.rs  types.rs
crates/sephera_core/src/core/context/: budget.rs  builder.rs  candidate.rs  excerpt.rs  focus.rs  grouping.rs  ranker.rs  source.rs  types.rs
crates/sephera_core/src/core/graph/: imports.rs  resolver.rs  types.rs
crates/sephera_core/src/core/language_data/: tests.rs
crates/sephera_core/src/core/runtime/: context.rs  git.rs  source.rs
crates/sephera_core/tests/: comment_style_matrix.rs  context_builder.rs  language_lookup_matrix.rs  loc_newlines.rs  token_like_code.rs
crates/sephera_core/tests/support/: loc_matrix.rs  mod.rs
crates/sephera_mcp/: Cargo.toml
crates/sephera_mcp/src/: lib.rs  server.rs
crates/sephera_tools/: Cargo.toml
crates/sephera_tools/src/: benchmark_corpus.rs  language_data.rs  lib.rs  main.rs
crates/sephera_tools/src/benchmark_corpus/: datasets.rs  templates.rs  tests.rs  writer.rs
crates/sephera_tools/src/language_data/: load.rs  model.rs  paths.rs  render.rs  tests.rs  validate.rs
crates/sephera_tools/tests/: benchmark_corpus.rs
data/: Data.py
datalyzer/: Exporter.py  sql.py
docs/: astro.config.mjs  package-lock.json  package.json
docs/pages/: install.md  usage.md
docs/src/content/docs/: 404.md  benchmarks.md  getting-started.md  index.md
docs/src/content/docs/architecture/: overview.md  releasing.md
docs/src/content/docs/commands/: context.md  graph.md  loc.md  mcp.md
docs/src/content/docs/configuration/: sephera-toml.md
docs/src/styles/: custom.css
etc/: config_data.py  subclass.py
etc/generate/: config_data.py  config_help.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: build_context_report.rs  render_context_markdown.rs  render_loc_table.rs  scan_content_newlines.rs
gui/: main.py  setup_app.py
gui/events/: menu.py  start_scan.py
gui/gui_utils/: uitls.py  utils.py
pages/advanced_usage/: index.html
pages/install/: index.html
pages/usage/: index.html
scripts/: ci_linux.sh  cppbuild.sh
search/: search_index.json
sephera/: CodeLoc.py  Stats.py  WalkFile.py  get_update.py  help.py  interactive.py  set_cfg.py  version.py
sephera-cpp/: CMakeLists.txt  build.sh  config.yml
sephera-cpp/Source/: main.cc  sephera.cc
sephera-cpp/Source/context/: context.cc
sephera-cpp/Source/context/include/: context.hpp  worker.hpp
sephera-cpp/Source/core/: loc.cc  loc_count.cc  parser.cc
sephera-cpp/Source/core/include/: loc.hpp  loc_count.hpp
sephera-cpp/Source/gui/: components.cc  init.cc
sephera-cpp/Source/gui/include/: components.hpp  init.hpp
sephera/interactive/: confirm.py  option.py
test/: 14.ml  4.pl  7.rb
utils/: error.py  stdout.py  utils.py
walk/: Stats.py  WalkFile.py
