[workspace]
members = ["crates/sephera_cli", "crates/sephera_core", "crates/sephera_tools"]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["reim"]
license = "GPL-3.0-only"
repository = "https://github.com/Reim-developer/Sephera"
homepage = "https://sephera.vercel.app"
rust-version = "1.85"

[workspace.dependencies]
sephera_core = { path = "crates/sephera_core", version = "0.2.0" }
