[workspace]
members = ["crates/sephera_cli", "crates/sephera_core", "crates/sephera_mcp", "crates/sephera_tools"]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["reim"]
license = "GPL-3.0-only"
repository = "https://github.com/Reim-developer/Sephera"
homepage = "https://sephera.vercel.app"
rust-version = "1.85"

[workspace.dependencies]
sephera_core = { path = "crates/sephera_core", version = "0.4.0" }
sephera_mcp = { path = "crates/sephera_mcp", version = "0.4.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
