[package]
name = "sephera"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Local-first Rust CLI for repository metrics and deterministic LLM context packs."
documentation = "https://docs.rs/sephera"
readme = "README.crates-io.md"
keywords = ["loc", "context", "code-analysis", "cli", "llm"]
categories = ["command-line-utilities", "development-tools"]
default-run = "sephera"
autobins = false

[[bin]]
name = "sephera"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.2.1"
sephera_core.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

[dev-dependencies]
insta = { version = "1.46.3", features = ["filters"] }
tempfile = "3.23.0"
