[package]
name = "sephera_core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.102"
globset = "0.4.18"
memmap2 = "0.9.9"
phf = { version = "0.11.3", features = ["macros"] }
rayon = "1.11.0"
regex = "1.12.2"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
