[package]
name = "sephera_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Shared analysis engine behind the Sephera CLI for LOC metrics, context building, and Tree-sitter AST compression."
documentation = "https://docs.rs/sephera_core"
readme = "README.crates-io.md"
keywords = ["loc", "context", "tree-sitter", "compression", "scanner"]
categories = ["development-tools", "text-processing"]

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.102"
globset = "0.4.18"
memmap2 = "0.9.9"
phf = { version = "0.11.3", features = ["macros"] }
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
toml = "0.9.8"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
url = "2.5.7"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
