[package]
name = "sephera_tools"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sephera_tools"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.23.0"
